tests/rustdoc-ui/invalid-cfg.stderr
error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:1:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:2:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:6:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:7:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:11:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:12:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:17:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:18:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
